--- a/assets/sass/globals/_globals.scss
+++ b/assets/sass/globals/_globals.scss
@@ -1,4 +1,5 @@
 body{
     font-size: 45px;
-    background-color: blue;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: white;
 }
