update git ignore

--- a/assets/sass/globals/_globals.scss
+++ b/assets/sass/globals/_globals.scss
@@ -1,5 +1,5 @@
+
+/* Global CSS */
 body{
-    font-size: 45px;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: white;
+    
 }
