--- a/assets/sass/globals/_globals.scss
+++ b/assets/sass/globals/_globals.scss
@@ -1,5 +1,66 @@
 
-/* Global CSS */
+@use "../theme/colors" as sskColor;
+@use "../theme/fonts" as sskFont;
+@import "../mixins/sskMixin";
+
+/* global css & reset style */
+
+*{
+ color: inherit;    
+ margin: 0;   
+}
+
 body{
-    
+    font-family: sskFont.$default;
+    font-size: 15px;
+    color: sskColor.$default;
+}
+
+ul{
+    padding: 0;
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+img{
+    width: 100%;
+}
+
+//Optional
+hr {
+    border: 0;
+    border-top: 1px dotted #efefef;
+}
+
+.error{
+    @include sskColorMixin(sskColor.$error){
+        margin: $base-margin;
+        padding: $base-padding;
+        border-radius: $base-border-radius;
+        border-width: $base-border-thickness;
+    }
+}
+
+.secondary{
+    @include sskColorMixin(sskColor.$secondary){
+        margin: $base-margin;
+        padding: $base-padding;
+        border-radius: $base-border-radius;
+        border-width: $base-border-thickness;
+    }
+}
+
+a, h1{
+    color: sskColor.$primary;
+}
+
+button{
+    background-color: sskColor.$primary;
+    border-radius: $base-border-radius;
+    border: 0;
+    color: white;
+    padding: $base-padding;
 }
