--- a/assets/sass/theme/_colors.scss
+++ b/assets/sass/theme/_colors.scss
@@ -1,4 +1,5 @@
 /* theme colors */
+@use "sass:map";
 
 $primary: rgb(107, 140, 255);
 $secondary: rgb(106, 202, 65);
@@ -16,6 +17,19 @@ $chocolate : rgb(118, 68, 0);
 $silver: rgb(201, 201, 201);
 $default: rgb(25, 25, 25);
 
-
-
-
+/* Color palette */
+$colors:(
+    "primary":rgb(107, 140, 255),
+    "secondary": rgb(106, 202, 65),
+    "error" : rgb(255, 0, 54),
+    "info": rgb(255, 198, 54),
+    "warning" :rgb(255, 132, 0),
+    "aero-blue" : rgb(181, 255, 233),
+    "medium-orchid": rgb(181, 79, 233),
+    "teal-blue" : rgb(0, 118, 146),
+    "forest-green" : rgb(0, 47, 0),
+    "chocolate" : rgb(118, 68, 0),
+    "silver": rgb(201, 201, 201),
+    "default": rgb(25, 25, 25),
+    "white": white,
+);
