--- a/assets/sass/globals/_globals.scss
+++ b/assets/sass/globals/_globals.scss
@@ -53,14 +53,14 @@ hr {
     }
 }
 
-a, h1{
+h1{
     color: sskColor.$primary;
 }
 
-button{
+/* button{
     background-color: sskColor.$primary;
     border-radius: $base-border-radius;
     border: 0;
     color: white;
     padding: $base-padding;
-}
+} */
