--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -1,6 +1,8 @@
 @use "../theme/colors" as sskColor;
 @use "../theme/fonts" as sskFont;
+@use "sass:color";
 @use "sass:math";
+@use "sass:map";
 
 .card{
     display: block;
