--- a/assets/sass/mixins/_sskMixin.scss
+++ b/assets/sass/mixins/_sskMixin.scss
@@ -62,3 +62,11 @@
         @content;
     }
 }
+
+/* Grid */
+
+@mixin grid($nb, $nb-columns) {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: math.div($nb * 100%, $grid-columns);
+}
