--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -1,6 +1,1 @@
-
-@import "globals";
-@import "./theme/fonts";
-@import "./mixins/sskMixin";
-@import "./theme/utilities";
-@import "components";
+@import "manjakely-css";
