Adding gradient button

--- a/manjakely-css/index.scss
+++ b/manjakely-css/index.scss
@@ -3,4 +3,5 @@
 @import "./theme/fonts";
 @import "./mixins/sskMixin";
 @import "./theme/utilities";
+@import "./theme/bg-gradient";
 @import "components";
