--- a/manjakely-css/components/_button.scss
+++ b/manjakely-css/components/_button.scss
@@ -29,3 +29,99 @@
     }
 }
 
+%btn-gradient{
+    @include buttonMixin();
+    position: relative;
+    outline:none;
+    border: none;
+
+    span{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        font-size: $base-font-size * 0.8;
+        z-index: 1;
+        position: relative;
+        background: transparent;
+    }
+
+    &::after{
+        content: '';
+        position: absolute;
+        display: block;
+        border-radius: $base-border-radius;
+        width: calc(100% - 8px);
+        height: calc(100% - 8px);
+        top: 4px;
+        left: 4px;
+    }
+
+    &::before{
+        content: '';
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        border-radius: $base-border-radius;
+    }
+
+    &:hover{
+        background-size: 400%;
+        animation: rotateBorder 10s linear infinite;
+
+        &::before{
+            opacity: 1;
+            filter: blur(5px);
+            transition: 0.3s opacity ease-in-out;
+         }
+    }
+}
+
+
+@each $value in $bg-gradients {
+    .btn-gradient-dark-#{$value}{
+        @extend %btn-gradient;
+        @include gradient-condition($value);
+
+        span{
+            color: white;  
+        }
+
+        &::after{
+            background-color: rgb(51, 51, 51);
+        }
+
+    }
+
+    .btn-gradient-light-#{$value}{
+        @extend %btn-gradient;
+        @include gradient-condition($value);
+
+        span{
+            color: black;  
+        }
+
+        &::after{
+            background-color: white;
+        }
+
+    }
+}
+
+
+@keyframes rotateBorder {
+    0%{
+        background-position: 0 0;
+    }
+    50%{
+        background-position: 400% 0;
+    }
+    100%{
+        background-position: 0 0;
+    }
+}
+
